--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="ja">
 
+<link rel="icon" type="image/png" href="/favicon.png">
+
 <head prefix="og: https://ogp.me/ns#">
 <meta property="og:url" content="https://az-jp.github.io/Discord_Tokens_Tool/" />
 <meta property="og:type" content=" website " />
