--- a/staffroll.html
+++ b/staffroll.html
@@ -1,7 +1,7 @@
 <html lang="ja">
 <head>
  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>スタッフロール(笑)</title>
+<title>Support</title>
 
 <style type="text/css">
 body{
@@ -47,11 +47,9 @@ function scroll_control(event) {
 <div style="height:500px"></div>
 STAFF<br>
 <br><br><br>
-企画<br>しらね<br><br><br>
-構成<br>多分夕立さん<br><br><br>
-プログラム<br>名桜はるさめ#9999<br>夕立改二#2068<br>のなめ#1234<br><br><br>
-ウェブデザイン<br>夕立改二#2068<br><br><br>
-匿名化<br>のなめ#1234<br><br><br>
+Twitter<br>@AXZ_official<br><br><br>
+Discord<br>れいな#7777<br><br><br>
+公式サイト<br>https://az-jp.github.io/AXZ-Homepage<br>夕立改二#2068<br>のなめ#1234<br><br><br>
 <br><br><br>
 <span style="font-size:80pt">END</span><br><br><br>
 <br><br><br><br><br><br><br><br><br><br>
