--- a/staffroll.html
+++ b/staffroll.html
@@ -49,10 +49,9 @@ STAFF<br>
 <br><br><br>
 Twitter<br>@AXZ_official<br><br><br>
 Discord<br>れいな#7777<br><br><br>
-公式サイト<br>https://az-jp.github.io/AXZ-Homepage<br>夕立改二#2068<br>のなめ#1234<br><br><br>
+公式サイト<br>https://az-jp.github.io/AXZ-Homepage<br><br><br>
 <br><br><br>
 <span style="font-size:80pt">END</span><br><br><br>
 <br><br><br><br><br><br><br><br><br><br>
 </body>
 </html>
-
