--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 
-<link rel="icon" type="image/png" href="https://media.discordapp.net/attachments/1075843387724410991/1075843390874325072/IMG_6426.jpg">
+<link rel="icon" type="image/png" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSN9s4V8zGvrsP6d6f8YYoWsxY6BbPv2Clrrg&usqp=CAU">
 
 <head prefix="og: https://ogp.me/ns#">
 <meta property="og:url" content="https://az-jp.github.io/Discord_Tokens_Tool/" />
