--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="icon" type="image/png" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSN9s4V8zGvrsP6d6f8YYoWsxY6BbPv2Clrrg&usqp=CAU">
 
 <head prefix="og: https://ogp.me/ns#">
-<meta property="og:url" content="https://az-jp.github.io/Discord_Tokens_Tool/" />
+<meta property="og:url" content=https://axz-official.github.io/Discord_Tokens_Tool/" />
 <meta property="og:type" content=" website " />
 <meta property="og:title" content="Discord Spammer" />
 <meta property="og:description" content="
