--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ Discord Tokenを使用して<br>
     
 <head>
     <meta charset="utf-8">
+    <title>Discord token</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
