--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 Discord Tokenを使用して<br>
 荒らしを行うことができるツールです。" />
 <meta property="og:site_name" content="Discord Token" />
-<meta property="og:image" content="https://images-ext-2.discordapp.net/external/IbsOoilmgiOlyu1dKSfXDD2mamvzLtGNynqv8JO6WHo/%3Fw%3D1200/https/ctkpaarrdata.files.wordpress.com/2022/10/image-5.png?width=960&height=430" />
+<meta property="og:image" content="https://cdn.discordapp.com/attachments/1083740412478500975/1083758865373462618/image-5.png" />
     
 <head>
     <meta charset="utf-8">
