--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 <html lang="ja">
 
 <link rel="icon" type="image/png" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSN9s4V8zGvrsP6d6f8YYoWsxY6BbPv2Clrrg&usqp=CAU">
+    
+<meta property="og:image" content="https://cdn.discordapp.com/attachments/1083740412478500975/1083772761257824256/image-5.png" />
+<style>
+    /* 画像を中央に配置する */
+    .og-image {
+        display: block;
+        margin: 0 auto;
+        max-width: 100%;
+        height: auto;
+    }
+</style>
+
 
 <head prefix="og: https://ogp.me/ns#">
 <meta property="og:url" content=https://axz-official.github.io/Discord_Tokens_Tool/" />
@@ -11,7 +23,7 @@
 Discord Tokenを使用して<br>
 荒らしを行うことができるツールです。" />
 <meta property="og:site_name" content="Discord Token" />
-<meta property="og:image" content="https://cdn.discordapp.com/attachments/1083740412478500975/1083772761257824256/image-5.png" />
+<meta property="og:image" content="https://cdn.discordapp.com/attachments/1083740412478500975/1083772761257824256/image-5.png" class="og-image" />
     
 <head>
     <meta charset="utf-8">
