--- a/index.html
+++ b/index.html
@@ -1,36 +1,24 @@
 <!DOCTYPE html>
 <html lang="ja">
-
-<link rel="icon" type="image/png" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSN9s4V8zGvrsP6d6f8YYoWsxY6BbPv2Clrrg&usqp=CAU">
-    
-<meta property="og:image" content="https://cdn.discordapp.com/attachments/1083740412478500975/1083772761257824256/image-5.png" />
-<style>
-    /* 画像を中央に配置する */
-    .og-image {
-        display: block;
-        margin: 0 auto;
-        max-width: 100%;
-        height: auto;
-    }
-</style>
-
-
 <head prefix="og: https://ogp.me/ns#">
-<meta property="og:url" content=https://axz-official.github.io/Discord_Tokens_Tool/" />
-<meta property="og:type" content=" website " />
-<meta property="og:title" content="Discord Spammer" />
-<meta property="og:description" content="
-Discord Tokenを使用して<br>
-荒らしを行うことができるツールです。" />
-<meta property="og:site_name" content="Discord Token" />
-<meta property="og:image" content="https://cdn.discordapp.com/attachments/1083740412478500975/1083772761257824256/image-5.png" class="og-image" />
-    
-<head>
     <meta charset="utf-8">
     <title>Discord token</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="icon" type="image/png" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSN9s4V8zGvrsP6d6f8YYoWsxY6BbPv2Clrrg&usqp=CAU">
+    <meta property="og:url" content="https://axz-official.github.io/Discord_Tokens_Tool/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Discord Spammer">
+    <meta property="og:description" content="Discord Tokenを使用して<br>荒らしを行うことができるツールです。">
+    <meta property="og:site_name" content="Discord Token">
+    <meta property="og:image" content="https://cdn.discordapp.com/attachments/1083740412478500975/1083772761257824256/image-5.png">
     <style>
+        /* og:imageを中央に配置する */
+        meta[property="og:image"] {
+            display: block;
+            margin: 0 auto;
+            max-width: 100%;
+            height: auto;
+        }
         .message {
             position: relative;
         }
@@ -51,10 +39,9 @@ Discord Tokenを使用して<br>
         }
     </style>
 </head>
-
 <body>
     <input type="hidden" id="is_login" value="false">
     <script src="script.js"></script>
 </body>
-
 </html>
+
