--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Discord Tokenを使用して<br>
 荒らしを行うことができるツールです。" />
 <meta property="og:site_name" content="Discord Token" />
 <meta property="og:image" content="https://cdn.discordapp.com/attachments/1083740412478500975/1083772761257824256/image-5.png" />
-<meta name="twitter:card" content="https://cdn.discordapp.com/attachments/1083740412478500975/1083772761257824256/image-5.png" />
+<meta name="twitter:card" content="summary_large_image" />
     
 <head>
     <meta charset="utf-8">
