--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 Discord Tokenを使用して<br>
 荒らしを行うことができるツールです。" />
 <meta property="og:site_name" content="Discord Token" />
-<meta property="og:image" content="https://cdn.discordapp.com/attachments/1083740412478500975/1083772761257824256/image-5.png" />
+<meta property="og:image" content="./images/サムネ-3064x1368.png" />
 <meta name="twitter:card" content="summary_large_image" />
     
 <head>
