--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 Discord Tokenを使用して<br>
 荒らしを行うことができるツールです。" />
 <meta property="og:site_name" content="Discord Token" />
-<meta property="og:image" content="images/thumbnail.png" />
+<meta property="og:image" content="https://axz-official.github.io/Discord_Tokens_Tool/images/thumbnail.png" />
 <meta name="twitter:card" content="summary_large_image" />
     
 <head>
