--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
 <meta property="og:type" content=" website " />
 <meta property="og:title" content="Discord Spammer" />
 <meta property="og:description" content="
-Discord Tokenを使用して<br>
-荒らしを行うことができるツールです。" />
-<meta property="og:site_name" content="Discord Token" />
+AXZの荒らしツールです<br>
+《機能》<br>
+[+]Tokenの生存確認<br>
+[+]入室/退出<br>
+[+]ロール認証突破<br>
+[+]チャンネルにメッセージ連投<br>
+[+]DM荒らし<br>
+[+]フレンド申請荒らし<br>
+[+]Tokenのアイコンの変更>br>
+
+
+<meta property="og:site_name" content="AXZ公式〆Raider" />
 <meta property="og:image" content="https://axz-official.github.io/Discord_Tokens_Tool/images/thumbnail.png" />
 <meta name="twitter:card" content="summary_large_image" />
     
