--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ AXZの荒らしツールです<br>
 [+]チャンネルにメッセージ連投<br>
 [+]DM荒らし<br>
 [+]フレンド申請荒らし<br>
-[+]Tokenのアイコンの変更>br>
+[+]Tokenのアイコンの変更
 
 
 <meta property="og:site_name" content="AXZ公式〆Raider" />
